Workspace main panel fixed (modules are visible)

--- a/framework/src/web/css/datalift.css
+++ b/framework/src/web/css/datalift.css
@@ -98,7 +98,7 @@ text-align:center;
 }
 
 #workspace-main-panel {
-  height:370px;
+  height:450px;
   margin-right:10px;
   margin-top:10px;  
   margin-left:13%;
